--- a/src/central-server/admin-service/ui/index.html
+++ b/src/central-server/admin-service/ui/index.html
@@ -30,6 +30,7 @@ THE SOFTWARE.
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="csp-nonce" content="__CSP_NONCE__">
     <title>%VITE_TITLE%</title>
   </head>
   <body>
